add inspector and update render fps widget